[package]
name = "native-dialog-open-file"
version = "0.1.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]

[lib]
name = "nd_open_file"
path = "src/lib.rs"

[[bin]]
name = "nd-open-file"
path = "src/main.rs"


[target.'cfg(target_os = "android")'.dependencies]
sig = "0.1"

[dependencies]
cpp_utils = "^0.2.0"
libc = "^0.2.33"
neon = "^0.1.22"
qt_core = "^0.2.3"
qt_widgets = "^0.2.3"
#libc = "^0.2.33"
##gtk = "^0.3.0"
##gtk-sys = "^0.5.0"
##qt_core = "^0.2.3"
##qt_widgets = "^0.2.3"
#cocoa = "^0.13.0"
#objc = "^0.2.2"
