[package]
name = "native-dialog-open-file"
version = "0.1.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]

[lib]
name = "nd_open_file"
path = "src/lib.rs"

[[bin]]
name = "nd-open-file"
path = "src/main.rs"

#[dependencies]
#cpp_utils = "^0.2.0"
#detect-desktop-environment = "^0.2.0"
#gtk = "^0.3.0"
#libc = "^0.2.33"
#neon = "^0.1.22"
#qt_core = "^0.2.3"
#qt_widgets = "^0.2.3"
#
#[patch.crates-io]
#"gtk" = { path = "../gtk" }
#
#[dependencies.glib]
#version = "0.4.0"
#git = "https://github.com/gtk-rs/glib"

[dependencies]
detect-desktop-environment = "^0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
cpp_utils = "^0.2.0"
libc = "^0.2.33"
neon = "^0.1.22"
qt_core = "^0.2.3"
qt_widgets = "^0.2.3"

[target.'cfg(target_os = "linux")'.dependencies.glib]
version = "0.4.0"
git = "https://github.com/gtk-rs/glib"

[target.'cfg(target_os = "linux")'.dependencies.gtk]
version = "0.3.0"
git = "https://github.com/demurgos/gtk"
branch = "file-chooser-buttons"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "^0.2.8"
ole32-sys = "^0.2.0"
uuid-sys = "^0.1.2"
widestring = "^0.2.2"
